--- a/Skills.html
+++ b/Skills.html
@@ -84,7 +84,7 @@
 <body>
   <header>
     <h1>🛠 Skill Training</h1>
-    <p>Explore self-learning and trainer modules designed under SBI Youth for India Fellowship</p>
+    <p>Explore self learning and trainer modules designed under SBI Youth for India Fellowship Project with the ANT NGO</p>
   </header>
 
   <main class="container">
@@ -96,25 +96,25 @@
     <!-- LEARN BY YOURSELF TAB -->
     <div id="learn" class="tab-content active">
       <div class="info-box">
-        <p>These <strong>Learn by Yourself</strong> modules are simple, activity-based guides created for rural youth to practice essential employability skills independently.</p>
+        <p>These <strong>Learn by Yourself</strong> modules are simple, activity based guides created for rural youth to practice essential employability skills independently.</p>
       </div>
 
       <div class="module-container">
         <div class="module-card">
           <h3>🗣 Communication & Leadership</h3>
-          <p>Build confidence, teamwork, and decision-making skills through simple activities.</p>
+          <p>Build confidence, teamwork and decision making skills through simple activities.</p>
           <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/19pJg2OnlCNyL-P_5-K8c3kxkNCCBtdm8/view?usp=sharing">Open Module</a>
         </div>
 
         <div class="module-card">
           <h3>📝 Resume Writing</h3>
-          <p>Step-by-step guide to create your first resume for jobs, scholarships, or internships.</p>
+          <p>Step-by-step guide to create your first resume for jobs, scholarships or internships.</p>
           <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1hObc37BvB6nBVf7yWkP44_lgia7Wuhu5/view?usp=sharing">Open Module</a>
         </div>
 
         <div class="module-card">
           <h3>💻 Excel Basics</h3>
-          <p>Learn Excel for data cleaning, VLOOKUP, pivot tables, and real-life reporting tasks.</p>
+          <p>Learn Excel for data cleaning, VLOOKUP, pivot tables and real life reporting tasks.</p>
           <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1dVc4CKHb4X6gCpSGs0SkH4nprkbbTnqZ/view?usp=sharing">Open Module</a>
         </div>
       </div>
@@ -123,38 +123,36 @@
     <!-- TRAINER’S GUIDE TAB -->
     <div id="trainer" class="tab-content">
       <div class="info-box">
-        <p>The <strong>Trainer’s Guides</strong> are structured modules for facilitators and NGO staff to conduct workshops confidently using activity-based, low-cost methods.</p>
+        <p>The <strong>Trainer’s Guides</strong> are structured modules for facilitators and NGO staff to conduct workshops confidently using activity based, low cost methods.</p>
       </div>
 
       <div class="module-container">
         <div class="module-card">
           <h3>🗣 Communication & Leadership – Trainer Guide</h3>
-          <p>2-day workshop plan for developing communication and leadership through games and roleplays.</p>
+          <p>2 day workshop plan for developing communication and leadership through games and roleplays.</p>
           <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1dCNsntles69GMWb5NWzrQXxuD8TeT6fI/view?usp=sharing">Open Guide</a>
         </div>
 
         <div class="module-card">
           <h3>📝 Resume Writing – Trainer Guide</h3>
-          <p>Practical, 3-hour session plan for helping youth draft their first resumes step-by-step.</p>
+          <p>Practical, 3 hour session plan for helping youth draft their first resumes step-by-step.</p>
           <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1VtS6b8Ag1O0kWAJrgfQvLpQaCcbyes2-/view?usp=sharing">Open Guide</a>
         </div>
 
         <div class="module-card">
           <h3>💻 Excel Workshop – Trainer Guide</h3>
-          <p>Detailed 2-day Excel training curriculum with Demo & Practice sheets for NGO staff.</p>
+          <p>Detailed 2 day Excel training curriculum with Demo & Practice sheets for NGO staff.</p>
           <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1E9Y9YuxM2mC2o55HHZD6GuU8D23ldftC/view?usp=sharing">Open Guide</a>
         </div>
-
+        <div class="module-card">
+          <h3>🧩 Excel – Trainer Demo Sheet</h3>
+          <p>Pre filled dataset for trainers to demonstrate Excel functions and data operations.</p>
+          <a class="open-btn" target="_blank" href="https://docs.google.com/spreadsheets/d/1BDUijHJWH2fJt_lCSNnefeHXpf9-ppxn/edit?usp=sharing">Open Sheet</a>
+        </div>
         <div class="module-card">
           <h3>📊 Excel – Final Practice Sheet</h3>
           <p>Excel workbook for participants to practice real data cleaning and analysis.</p>
           <a class="open-btn" target="_blank" href="https://docs.google.com/spreadsheets/d/1Wa_qJM3BLW5PK8ppWN1UxPeaQS9BvIZw/edit?usp=sharing">Open Sheet</a>
-        </div>
-
-        <div class="module-card">
-          <h3>🧩 Excel – Trainer Demo Sheet</h3>
-          <p>Pre-filled dataset for trainers to demonstrate Excel functions and data operations.</p>
-          <a class="open-btn" target="_blank" href="https://docs.google.com/spreadsheets/d/1BDUijHJWH2fJt_lCSNnefeHXpf9-ppxn/edit?usp=sharing">Open Sheet</a>
         </div>
       </div>
     </div>
